test/tests/stages/18_structures/valid/params_and_returns/libraries/return_calling_conventions_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[566]:
  int
  identifier(strcmp)
  (
  char
  *
  identifier(s1)
  ,
  char
  *
  identifier(s2)
  )
  ;
  int
  identifier(strncmp)
  (
  char
  *
  identifier(s1)
  ,
  char
  *
  identifier(s2)
  ,
  unsigned
  long
  identifier(n)
  )
  ;
  struct
  identifier(one_int)
  {
  int
  identifier(i)
  ;
  char
  identifier(c)
  ;
  }
  ;
  struct
  identifier(one_int_exactly)
  {
  unsigned
  long
  identifier(l)
  ;
  }
  ;
  struct
  identifier(two_ints)
  {
  char
  identifier(c)
  ;
  int
  identifier(arr)
  [
  const int(3)
  ]
  ;
  }
  ;
  struct
  identifier(two_ints_nested)
  {
  struct
  identifier(one_int)
  identifier(a)
  ;
  struct
  identifier(one_int)
  identifier(b)
  ;
  }
  ;
  struct
  identifier(twelve_bytes)
  {
  int
  identifier(i)
  ;
  char
  identifier(arr)
  [
  const int(8)
  ]
  ;
  }
  ;
  struct
  identifier(one_xmm)
  {
  double
  identifier(d)
  ;
  }
  ;
  struct
  identifier(two_xmm)
  {
  double
  identifier(d)
  [
  const int(2)
  ]
  ;
  }
  ;
  struct
  identifier(int_and_xmm)
  {
  char
  identifier(c)
  ;
  double
  identifier(d)
  ;
  }
  ;
  struct
  identifier(xmm_and_int)
  {
  struct
  identifier(one_xmm)
  identifier(dbl)
  ;
  char
  identifier(c)
  [
  const int(3)
  ]
  ;
  }
  ;
  struct
  identifier(odd_size)
  {
  char
  identifier(arr)
  [
  const int(5)
  ]
  ;
  }
  ;
  struct
  identifier(memory)
  {
  double
  identifier(d)
  ;
  char
  identifier(c)
  [
  const int(3)
  ]
  ;
  long
  identifier(l)
  ;
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(one_int)
  identifier(return_int_struct)
  (
  void
  )
  ;
  struct
  identifier(twelve_bytes)
  identifier(return_two_int_struct)
  (
  void
  )
  ;
  struct
  identifier(one_xmm)
  identifier(return_double_struct)
  (
  void
  )
  ;
  struct
  identifier(two_xmm)
  identifier(return_two_double_struct)
  (
  void
  )
  ;
  struct
  identifier(xmm_and_int)
  identifier(return_mixed)
  (
  void
  )
  ;
  struct
  identifier(int_and_xmm)
  identifier(return_mixed2)
  (
  void
  )
  ;
  struct
  identifier(memory)
  identifier(return_on_stack)
  (
  void
  )
  ;
  struct
  identifier(memory)
  identifier(pass_and_return_regs)
  (
  int
  identifier(i)
  ,
  double
  identifier(d)
  ,
  struct
  identifier(int_and_xmm)
  identifier(strct)
  ,
  int
  identifier(c)
  ,
  struct
  identifier(two_ints)
  identifier(t_i)
  ,
  long
  identifier(l)
  ,
  struct
  identifier(one_int_exactly)
  identifier(o_i_e)
  ,
  int
  identifier(c2)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(one_int_exactly)
  identifier(one_long)
  =
  {
  const long(567890l)
  }
  ;
  struct
  identifier(two_ints)
  identifier(two_ints)
  =
  {
  const char('_')
  ,
  {
  const int(5)
  ,
  const int(6)
  ,
  const int(7)
  }
  }
  ;
  struct
  identifier(int_and_xmm)
  identifier(int_and_xmm)
  =
  {
  const char('p')
  ,
  const double(4.56)
  }
  ;
  struct
  identifier(one_int)
  identifier(s1)
  =
  identifier(return_int_struct)
  (
  )
  ;
  if
  (
  identifier(s1)
  .
  identifier(i)
  !=
  const int(1)
  ||
  identifier(s1)
  .
  identifier(c)
  !=
  const int(2)
  )
  {
  return
  const int(1)
  ;
  }
  struct
  identifier(twelve_bytes)
  identifier(s2)
  =
  identifier(return_two_int_struct)
  (
  )
  ;
  if
  (
  identifier(s2)
  .
  identifier(i)
  !=
  const int(10)
  ||
  identifier(strncmp)
  (
  identifier(s2)
  .
  identifier(arr)
  ,
  string literal("12345678")
  ,
  sizeof
  identifier(s2)
  .
  identifier(arr)
  )
  )
  return
  const int(2)
  ;
  struct
  identifier(one_xmm)
  identifier(s3)
  =
  identifier(return_double_struct)
  (
  )
  ;
  if
  (
  identifier(s3)
  .
  identifier(d)
  !=
  const double(100.625)
  )
  return
  const int(3)
  ;
  struct
  identifier(two_xmm)
  identifier(s4)
  =
  identifier(return_two_double_struct)
  (
  )
  ;
  if
  (
  identifier(s4)
  .
  identifier(d)
  [
  const int(0)
  ]
  !=
  const double(8.8)
  ||
  identifier(s4)
  .
  identifier(d)
  [
  const int(1)
  ]
  !=
  const double(7.8)
  )
  return
  const int(4)
  ;
  struct
  identifier(xmm_and_int)
  identifier(s5)
  =
  identifier(return_mixed)
  (
  )
  ;
  if
  (
  identifier(s5)
  .
  identifier(dbl)
  .
  identifier(d)
  !=
  const double(10.0)
  ||
  identifier(strcmp)
  (
  identifier(s5)
  .
  identifier(c)
  ,
  string literal("ab")
  )
  )
  return
  const int(5)
  ;
  struct
  identifier(int_and_xmm)
  identifier(s6)
  =
  identifier(return_mixed2)
  (
  )
  ;
  if
  (
  identifier(s6)
  .
  identifier(c)
  !=
  const int(127)
  ||
  identifier(s6)
  .
  identifier(d)
  !=
  const double(34e43)
  )
  return
  const int(6)
  ;
  struct
  identifier(memory)
  identifier(s7)
  =
  identifier(return_on_stack)
  (
  )
  ;
  if
  (
  identifier(s7)
  .
  identifier(d)
  !=
  const double(1.25)
  ||
  identifier(strcmp)
  (
  identifier(s7)
  .
  identifier(c)
  ,
  string literal("xy")
  )
  ||
  identifier(s7)
  .
  identifier(l)
  !=
  const long(100l)
  ||
  identifier(s7)
  .
  identifier(i)
  !=
  const int(44)
  )
  return
  const int(7)
  ;
  identifier(s7)
  =
  identifier(pass_and_return_regs)
  (
  const int(6)
  ,
  const double(4.0)
  ,
  identifier(int_and_xmm)
  ,
  const int(5)
  ,
  identifier(two_ints)
  ,
  const int(77)
  ,
  identifier(one_long)
  ,
  const int(99)
  )
  ;
  if
  (
  identifier(s7)
  .
  identifier(d)
  ||
  identifier(s7)
  .
  identifier(c)
  [
  const int(0)
  ]
  ||
  identifier(s7)
  .
  identifier(c)
  [
  const int(1)
  ]
  ||
  identifier(s7)
  .
  identifier(c)
  [
  const int(2)
  ]
  )
  return
  const int(8)
  ;
  if
  (
  identifier(s7)
  .
  identifier(i)
  )
  return
  const int(9)
  ;
  if
  (
  identifier(s7)
  .
  identifier(l)
  !=
  const int(100)
  )
  return
  const int(10)
  ;
  return
  const int(0)
  ;
  }
